[gd_scene load_steps=41 format=4 uid="uid://clrkoybwc53iw"]

[ext_resource type="Script" uid="uid://bvvw4yjw67m6i" path="res://scenes/regions/ghost_town/structures/house.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bc63jbw8vqiey" path="res://assets/tilesets/wooden house interior.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dltvwv38wt4np" path="res://assets/tilesets/ladder.png" id="2_yuyoe"]
[ext_resource type="Texture2D" uid="uid://bbiumsoktgnt0" path="res://assets/tilesets/house_props.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cr7q7slde8x18" path="res://assets/tilesets/platform wood.png" id="3_fp2tm"]
[ext_resource type="Texture2D" uid="uid://big7php8eiqbm" path="res://assets/tilesets/chest_001.png" id="4"]
[ext_resource type="Texture2D" uid="uid://beeetlr2ww055" path="res://assets/tilesets/torch_anim.png" id="5"]
[ext_resource type="PackedScene" uid="uid://b8nacnk6tsy0k" path="res://scenes/entities/player/Player.tscn" id="6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fp2tm"]
texture = ExtResource("2_yuyoe")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4ugo4"]
texture = ExtResource("3_fp2tm")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g1jwj"]
texture = ExtResource("2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.0988, -8, -6.0988, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.92202, -8, 8, -8, 8, 8, 5.92202, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.0988, -8, -6.0988, 8, -8, 8)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.92202, -8, 8, -8, 8, 8, 5.92202, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -6.0988, -8, -6.0988, 8, -8, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.92202, -8, 8, -8, 8, 8, 5.92202, 8)
0:4/0 = 0
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.15425, 8, 3.97748, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.15425, 8, 3.97748, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.15425, 8, 3.97748, 8, 8, -8, 8)
4:4/0 = 0
5:2/0 = 0
6:2/0 = 0
5:3/0 = 0
6:3/0 = 0
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.15425, 8, 3.97748, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.15425, 8, 3.97748, 8, 8, -8, 8)
5:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1nkdq"]
texture = ExtResource("3")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
41:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
45:0/0 = 0
46:0/0 = 0
47:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
45:1/0 = 0
46:1/0 = 0
47:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
47:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
45:3/0 = 0
46:3/0 = 0
47:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
44:4/0 = 0
45:4/0 = 0
46:4/0 = 0
47:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
44:5/0 = 0
45:5/0 = 0
46:5/0 = 0
47:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
42:6/0 = 0
43:6/0 = 0
44:6/0 = 0
45:6/0 = 0
46:6/0 = 0
47:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
44:7/0 = 0
45:7/0 = 0
46:7/0 = 0
47:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
42:8/0 = 0
43:8/0 = 0
44:8/0 = 0
45:8/0 = 0
46:8/0 = 0
47:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
42:9/0 = 0
43:9/0 = 0
44:9/0 = 0
45:9/0 = 0
46:9/0 = 0
47:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
42:10/0 = 0
43:10/0 = 0
44:10/0 = 0
45:10/0 = 0
46:10/0 = 0
47:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
38:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
42:11/0 = 0
43:11/0 = 0
44:11/0 = 0
45:11/0 = 0
46:11/0 = 0
47:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
38:12/0 = 0
39:12/0 = 0
40:12/0 = 0
41:12/0 = 0
42:12/0 = 0
43:12/0 = 0
44:12/0 = 0
45:12/0 = 0
46:12/0 = 0
47:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
37:13/0 = 0
38:13/0 = 0
39:13/0 = 0
40:13/0 = 0
41:13/0 = 0
42:13/0 = 0
43:13/0 = 0
44:13/0 = 0
45:13/0 = 0
46:13/0 = 0
47:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
37:14/0 = 0
38:14/0 = 0
39:14/0 = 0
40:14/0 = 0
41:14/0 = 0
42:14/0 = 0
43:14/0 = 0
44:14/0 = 0
45:14/0 = 0
46:14/0 = 0
47:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0
36:15/0 = 0
37:15/0 = 0
38:15/0 = 0
39:15/0 = 0
40:15/0 = 0
41:15/0 = 0
42:15/0 = 0
43:15/0 = 0
44:15/0 = 0
45:15/0 = 0
46:15/0 = 0
47:15/0 = 0

[sub_resource type="TileSet" id="TileSet_g7624"]
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_g1jwj")
sources/3 = SubResource("TileSetAtlasSource_1nkdq")
sources/0 = SubResource("TileSetAtlasSource_fp2tm")
sources/1 = SubResource("TileSetAtlasSource_4ugo4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yuyoe"]
texture = ExtResource("2_yuyoe")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3sjyl"]
texture = ExtResource("3_fp2tm")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_fp2tm"]
sources/0 = SubResource("TileSetAtlasSource_yuyoe")
sources/1 = SubResource("TileSetAtlasSource_3sjyl")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fp2tm"]
b = Vector2(128, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgwol"]
atlas = ExtResource("4")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vbhh"]
atlas = ExtResource("4")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxwc0"]
atlas = ExtResource("4")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu51o"]
atlas = ExtResource("4")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnyp8"]
atlas = ExtResource("4")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ry7yi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgwol")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vbhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxwc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu51o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnyp8")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2pxf"]
size = Vector2(23.8, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08yad"]
size = Vector2(16.2, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecx1b"]
atlas = ExtResource("5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkfw4"]
atlas = ExtResource("5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gucgu"]
atlas = ExtResource("5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pf4o"]
atlas = ExtResource("5")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dmo7"]
atlas = ExtResource("5")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_c6bc0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecx1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkfw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gucgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pf4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dmo7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftukx"]
size = Vector2(63.9998, 88)

[sub_resource type="Animation" id="Animation_uyuy8"]
resource_name = "fade_in"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sg5ug"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mju46"]
_data = {
&"fade_in": SubResource("Animation_uyuy8"),
&"fade_out": SubResource("Animation_sg5ug")
}

[sub_resource type="Gradient" id="Gradient_j058w"]
offsets = PackedFloat32Array(0, 0.669565)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_feie1"]
gradient = SubResource("Gradient_j058w")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_keoxh"]
offsets = PackedFloat32Array(0, 0.359649, 0.684211)
colors = PackedColorArray(0.394737, 0.394737, 0.394737, 1, 0.394737, 0.394737, 0.394737, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_at21y"]
gradient = SubResource("Gradient_keoxh")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fp2tm"]
size = Vector2(24, 216)

[node name="house" type="Node2D"]
script = ExtResource("1")
metadata/_edit_horizontal_guides_ = [11.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1019.0
offset_top = -744.0
offset_right = 3556.0
offset_bottom = 2296.0
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_g7624")
format = 2

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAAAAgABAAAAAAACAAAAAgACAAAAAAADAAAAAgADAAAAAAAEAAAAAgABAAAAAAAFAAAAAgACAAAAAAAGAAAAAgADAAAAAAAHAAAAAgABAAAAAAAIAAAAAgACAAAAAAAJAAAAAgADAAAAAAABAAEAAgABAAEAAAABAAIAAgABAAIAAAABAAMAAgABAAEAAAACAAEAAgACAAIAAAACAAIAAgAFAAAAAAACAAMAAgACAAEAAAADAAEAAgACAAIAAAADAAIAAgACAAIAAAADAAMAAgACAAIAAAAEAAEAAgACAAIAAAAEAAIAAgABAAIAAAAEAAMAAgACAAIAAAAFAAEAAgACAAIAAAAFAAIAAgACAAIAAAAFAAMAAgACAAIAAAAGAAEAAgACAAIAAAAGAAIAAgADAAIAAAAGAAMAAgACAAIAAAAEAAQAAgACAAIAAAAEAAUAAgACAAIAAAAEAAYAAgABAAQAAAAFAAQAAgACAAIAAAAFAAUAAgACAAIAAAAFAAYAAgACAAQAAAAGAAQAAgACAAIAAAAGAAUAAgACAAIAAAAGAAYAAgADAAQAAAABAAQAAgABAAIAAAABAAUAAgABAAMAAAABAAYAAgABAAQAAAACAAQAAgAFAAIAAAACAAUAAgAFAAMAAAACAAYAAgAFAAQAAAADAAQAAgAGAAIAAAADAAUAAgAGAAMAAAADAAYAAgAGAAQAAAAKAAQAAgACAAMAAAAKAAUAAgACAAIAAAAKAAYAAgADAAQAAAAHAAQAAgACAAIAAAAHAAUAAgACAAIAAAAHAAYAAgABAAQAAAAIAAQAAgACAAIAAAAIAAUAAgACAAIAAAAIAAYAAgACAAQAAAAJAAQAAgACAAIAAAAJAAUAAgACAAIAAAAJAAYAAgADAAQAAAAHAAEAAgACAAIAAAAHAAIAAgABAAIAAAAHAAMAAgACAAIAAAAIAAEAAgACAAEAAAAIAAIAAgACAAIAAAAIAAMAAgABAAEAAAAJAAEAAgAFAAAAAAAJAAIAAgACAAIAAAAJAAMAAgACAAIAAAAKAAEAAgADAAEAAAAKAAMAAgABAAMAAAAAAAEAAgAAAAIAAAAAAAIAAgAAAAMAAAAAAAMAAgAAAAEAAAAAAAQAAgAFAAAAAAAAAAUAAgAAAAMAAAAAAAAAAgAAAAAAAAAAAAYAAgAAAAQAAAAKAAAAAgABAAEAAAAKAAIAAgADAAEAAAALAAAAAgADAAEAAAALAAEAAgACAAMAAAALAAIAAgACAAIAAAALAAMAAgADAAEAAAALAAQAAgABAAEAAAALAAUAAgABAAEAAAALAAYAAgACAAQAAAAMAAAAAgADAAEAAAAMAAEAAgABAAEAAAAMAAIAAgACAAEAAAAMAAMAAgACAAMAAAAMAAQAAgACAAIAAAAMAAUAAgABAAMAAAAMAAYAAgADAAQAAAANAAYAAgABAAQAAAANAAUAAgADAAMAAAANAAQAAgADAAEAAAANAAMAAgADAAEAAAANAAIAAgACAAIAAAANAAEAAgABAAIAAAAOAAEAAgACAAEAAAAPAAEAAgABAAMAAAAPAAIAAgABAAEAAAAPAAMAAgABAAEAAAAPAAQAAgABAAIAAAAPAAUAAgABAAEAAAAOAAUAAgAFAAAAAAAOAAYAAgACAAQAAAAOAAQAAgACAAIAAAAOAAMAAgADAAEAAAAOAAIAAgADAAMAAAAOAAAAAgACAAIAAAANAAAAAgABAAIAAAAPAAYAAgACAAQAAAAPAAAAAgAFAAAAAAAQAAAAAgADAAEAAAAQAAEAAgADAAEAAAAQAAIAAgADAAEAAAAQAAMAAgABAAMAAAAQAAQAAgACAAMAAAAQAAUAAgACAAMAAAAQAAYAAgACAAQAAAARAAYAAgADAAQAAAARAAUAAgABAAIAAAARAAQAAgABAAEAAAARAAMAAgACAAMAAAARAAIAAgAFAAAAAAARAAEAAgADAAMAAAARAAAAAgACAAIAAAASAAAAAgADAAIAAAASAAEAAgABAAEAAAASAAIAAgABAAMAAAASAAMAAgABAAEAAAASAAQAAgABAAEAAAASAAUAAgABAAMAAAASAAYAAgACAAQAAAAMAP//AgACAAEAAAAMAP7/AgABAAMAAAAMAP3/AgABAAEAAAAMAPz/AgACAAIAAAAMAPn/AgABAAIAAAAMAPr/AgADAAIAAAAMAPv/AgABAAIAAAANAPn/AgABAAMAAAAOAPn/AgACAAMAAAAPAPn/AgADAAIAAAAQAPn/AgACAAIAAAARAPn/AgADAAIAAAASAPn/AgABAAEAAAATAPn/AgACAAEAAAAUAPn/AgABAAMAAAAVAPn/AgABAAEAAAAWAPn/AgABAAIAAAAXAPn/AgADAAMAAAAYAPn/AgADAAIAAAAZAPn/AgADAAEAAAAaAPn/AgADAAIAAAAbAPn/AgABAAEAAAAcAPn/AgACAAIAAAAdAPn/AgABAAMAAAAeAPn/AgADAAEAAAAeAPr/AgABAAMAAAAeAPv/AgADAAMAAAAeAPz/AgACAAMAAAAeAP3/AgACAAEAAAAeAP7/AgACAAIAAAAeAP//AgABAAQAAAAdAP//AgACAAQAAAAcAP//AgADAAQAAAAbAP//AgACAAQAAAAaAP//AgADAAQAAAAZAP//AgACAAQAAAAYAP//AgABAAQAAAAXAP//AgABAAQAAAAWAP//AgADAAQAAAAVAP//AgACAAQAAAAUAP//AgABAAQAAAATAAAAAgAEAAEAAAATAP//AgADAAIAAAATAAEAAgAEAAEAAAATAAIAAgAEAAMAAAATAAMAAgAEAAIAAAATAAQAAgAEAAEAAAATAAUAAgAEAAIAAAATAAYAAgAEAAQAAAASAP7/AgACAAEAAAASAP//AgACAAIAAAARAP//AgACAAIAAAAQAP//AgABAAIAAAAPAP//AgACAAIAAAAPAP7/AgABAAEAAAAOAP7/AgADAAEAAAANAP7/AgABAAEAAAANAP//AgACAAEAAAAOAP//AgABAAIAAAANAP3/AgABAAIAAAANAPz/AgADAAIAAAANAPv/AgAFAAAAAAANAPr/AgADAAEAAAAPAPr/AgADAAIAAAAPAPv/AgABAAEAAAAOAPv/AgADAAIAAAAOAPz/AgACAAIAAAAOAP3/AgABAAEAAAAPAP3/AgACAAEAAAAQAP3/AgABAAEAAAARAP3/AgADAAEAAAASAP3/AgADAAMAAAATAP3/AgADAAMAAAAUAP3/AgACAAEAAAAVAP3/AgABAAMAAAAWAP3/AgABAAEAAAAXAP3/AgABAAIAAAAYAPz/AgADAAEAAAAZAPz/AgADAAEAAAAaAPz/AgACAAIAAAAbAP3/AgADAAEAAAAcAP3/AgABAAEAAAAdAP3/AgADAAEAAAAdAP7/AgABAAMAAAAcAP7/AgADAAMAAAAbAP7/AgABAAIAAAAaAP7/AgADAAMAAAAZAP7/AgADAAIAAAAYAP7/AgABAAMAAAAXAP7/AgABAAEAAAAWAP7/AgACAAEAAAAVAP7/AgACAAMAAAAUAP7/AgACAAMAAAATAP7/AgADAAIAAAARAP7/AgADAAEAAAAQAP7/AgADAAIAAAAOAPr/AgADAAMAAAAQAPr/AgABAAIAAAARAPr/AgAFAAAAAAASAPr/AgABAAMAAAATAPr/AgACAAMAAAAUAPr/AgACAAEAAAAVAPr/AgADAAMAAAAWAPr/AgADAAMAAAAXAPr/AgADAAMAAAAYAPr/AgACAAIAAAAZAPr/AgABAAEAAAAaAPr/AgADAAMAAAAbAPr/AgACAAEAAAAcAPr/AgABAAMAAAAdAPr/AgACAAEAAAAdAPv/AgABAAMAAAAdAPz/AgABAAEAAAAcAPz/AgACAAIAAAAbAPz/AgAFAAAAAAAaAPv/AgABAAEAAAAZAPv/AgACAAIAAAAYAPv/AgADAAIAAAAUAPv/AgACAAMAAAATAPv/AgABAAMAAAASAPv/AgADAAMAAAARAPv/AgADAAIAAAAQAPv/AgACAAEAAAAQAPz/AgADAAIAAAAPAPz/AgACAAMAAAARAPz/AgADAAMAAAASAPz/AgADAAMAAAATAPz/AgACAAEAAAAUAPz/AgACAAIAAAAVAPz/AgABAAEAAAAVAPv/AgADAAEAAAAWAPv/AgACAAMAAAAXAPv/AgABAAMAAAAWAPz/AgADAAIAAAAXAPz/AgADAAMAAAAcAPv/AgABAAIAAAAbAPv/AgABAAIAAAAYAP3/AgADAAEAAAAZAP3/AgADAAIAAAAaAP3/AgABAAEAAAA=")
tile_set = SubResource("TileSet_g7624")

[node name="Layer2" type="TileMapLayer" parent="TileMap"]
position = Vector2(2, 0)
tile_map_data = PackedByteArray("AAATAAEAAAAAAAEAAAATAAIAAAAAAAIAAAATAAMAAAAAAAEAAAATAAQAAAAAAAIAAAATAAUAAAAAAAEAAAATAAAAAAAAAAAAAAATAAYAAAAAAAMAAAAMAAAAAQABAAEAAAANAAAAAQABAAEAAAAOAAAAAQABAAEAAAAPAAAAAQABAAEAAAAQAAAAAQABAAEAAAARAAAAAQABAAEAAAASAAAAAQABAAEAAAA=")
tile_set = SubResource("TileSet_fp2tm")

[node name="StaticBody2D" type="StaticBody2D" parent="TileMap"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/StaticBody2D"]
position = Vector2(192, 0)
shape = SubResource("SegmentShape2D_fp2tm")
one_way_collision = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
position = Vector2(316, 0)
polygon = PackedVector2Array(4, -4, 4, -4, 4, 0, 0, 0)
one_way_collision = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
polygon = PackedVector2Array(496, 0, 496, -112, 192, -112, 192, 0, 188, -4, 188, -116, 500, -116, 500, -4)

[node name="chest" type="AnimatedSprite2D" parent="."]
position = Vector2(595, 352)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ry7yi")
animation = &"closed"
autoplay = "closed"

[node name="chest" type="Area2D" parent="chest"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest/chest"]
position = Vector2(0.299988, 6.20003)
shape = SubResource("RectangleShape2D_y2pxf")

[node name="StaticBody2D" type="StaticBody2D" parent="chest"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest/StaticBody2D"]
position = Vector2(0.0999832, 9.00001)
shape = SubResource("RectangleShape2D_08yad")

[node name="torch" type="AnimatedSprite2D" parent="."]
position = Vector2(216, 88)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_c6bc0")
autoplay = "default"
frame_progress = 0.982628

[node name="Player" parent="." instance=ExtResource("6")]
position = Vector2(98, 168)

[node name="door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2(96.0001, 172)
shape = SubResource("RectangleShape2D_ftukx")

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mju46")
}
autoplay = "fade_in"

[node name="ColorRect" type="ColorRect" parent="transition"]
self_modulate = Color(1, 1, 1, 0.0166667)
anchors_preset = -1
anchor_top = -2.90694
anchor_right = 7.49219
offset_left = -4005.0
offset_top = 386.997
offset_right = -1557.0
offset_bottom = 2976.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(213, 80)
scale = Vector2(4, 4)
color = Color(0.984314, 0.705882, 0.0980392, 1)
shadow_color = Color(0, 0, 0, 1)
texture = SubResource("GradientTexture2D_feie1")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(1, 0.866667, 0.854902, 1)
energy = 0.7
blend_mode = 1

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(96, 180)
scale = Vector2(2, 2.375)
energy = 0.62
texture = SubResource("GradientTexture2D_at21y")

[node name="ladder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder"]
position = Vector2(628, 108)
shape = SubResource("RectangleShape2D_fp2tm")

[connection signal="body_entered" from="chest/chest" to="." method="_on_chest_body_entered"]
[connection signal="body_exited" from="chest/chest" to="." method="_on_chest_body_exited"]
[connection signal="body_entered" from="door" to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="door" to="." method="_on_door_body_exited"]
[connection signal="body_entered" from="ladder" to="." method="_on_ladder_body_entered"]
[connection signal="body_exited" from="ladder" to="." method="_on_ladder_body_exited"]
